Nav, main and footer content

--- a/index.html
+++ b/index.html
@@ -1,13 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="https://codjoelmayer.github.io/projectImages/images/logo.png" type="image/x-icon">
     <link rel="stylesheet" href="./css/style.css">
-    <title>Document</title>
+    <title>Joel's Favorite Recreation</title>
 </head>
+
 <body>
-    
+    <nav class="menu">
+        <a href="./index.html"><img src="https://codjoelmayer.github.io/projectImages/images/logo.png" alt="logo"></a>
+        <ul id="menu-list">
+            <li><a href="#landing">Landing</a></li>
+            <li><a href=""></a></li>
+            <li><a href=""></a></li>
+            <li><a href=""></a></li>
+        </ul>
+    </nav>
+    <main>
+        <section id="landing">
+            <img src="https://codjoelmayer.github.io/projectImages/images/joel9.jpg" alt="profile" loading="lazy">
+        </section>
+        <section id="">
+
+        </section>
+        <section id="">
+
+        </section>
+        <section id="">
+
+        </section>
+    </main>
+    <footer>
+        <span>Joel's Favorite Recreation @
+            <span id="cYear"></span>
+        </span>
+    </footer>
     <script src="./script/code.js"></script>
 </body>
+
 </html>
