Custom variables and outer layout

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <nav class="menu">
         <a href="./index.html"><img src="https://codjoelmayer.github.io/projectImages/images/logo.png" alt="logo"></a>
-        <ul id="menu-list">
+        <ul class="menu-list">
             <li><a href="#landing">Landing</a></li>
             <li><a href=""></a></li>
             <li><a href=""></a></li>
