Header and footer bg color. Including few other styling

--- a/index.html
+++ b/index.html
@@ -21,7 +21,10 @@
     </nav>
     <main>
         <section id="landing">
-            <img src="https://codjoelmayer.github.io/projectImages/images/joel9.jpg" alt="profile" loading="lazy">
+            <div class="card">
+                <img src="https://codjoelmayer.github.io/projectImages/images/joel9.jpg" alt="profile" loading="lazy">
+                <h2>Joel Mukanya</h2>
+            </div>
         </section>
         <section id="">
 
@@ -34,9 +37,9 @@
         </section>
     </main>
     <footer>
-        <span>Joel's Favorite Recreation @
+        <p id="footer-content">Joel's Favorite Recreation @
             <span id="cYear"></span>
-        </span>
+        </p>
     </footer>
     <script src="./script/code.js"></script>
 </body>
