--- a/index.html
+++ b/index.html
@@ -11,28 +11,23 @@
 
 <body>
     <nav class="menu">
-        <a href="./index.html"><img src="https://codjoelmayer.github.io/projectImages/images/logo.png" alt="logo"></a>
+        <a href="./index.html">
+            <img src="https://codjoelmayer.github.io/projectImages/images/logo.png" alt="logo">
+        </a>
         <ul class="menu-list">
-            <li><a href="#landing">Landing</a></li>
-            <li><a href=""></a></li>
-            <li><a href=""></a></li>
-            <li><a href=""></a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#chess">Chess</a></li>
         </ul>
     </nav>
     <main>
-        <section id="landing">
+        <section id="about">
             <div class="card">
                 <img src="https://codjoelmayer.github.io/projectImages/images/joel9.jpg" alt="profile" loading="lazy">
                 <h2>Joel Mukanya</h2>
+                <span id="about-content">About me</span>
             </div>
         </section>
-        <section id="">
-
-        </section>
-        <section id="">
-
-        </section>
-        <section id="">
+        <section id="chess">
 
         </section>
     </main>
