--- a/index.html
+++ b/index.html
@@ -28,6 +28,89 @@
             </div>
         </section>
         <section id="chess">
+            <h2>Playground</h2>
+            <div class="chessBoard">
+                <div class="items" id="firstRank">
+                    <div>&#9820;</div>
+                    <div>&#9822;</div>
+                    <div>&#9821;</div>
+                    <div>&#9819;</div>
+                    <div>&#9818;</div>
+                    <div>&#9821;</div>
+                    <div>&#9822;</div>
+                    <div>&#9820;</div>
+                </div>
+                <div class="items" id="secondRank">
+                    <div>&#9823;</div>
+                    <div>&#9823;</div>
+                    <div>&#9823;</div>
+                    <div>&#9823;</div>
+                    <div>&#9823;</div>
+                    <div>&#9823;</div>
+                    <div>&#9823;</div>
+                    <div>&#9823;</div>
+                </div>
+                <div class="items" id="thirdRank">
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                </div>
+                <div class="items" id="fourthRank">
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                </div>
+                <div class="items" id="fifthRank">
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                </div>
+                <div class="items" id="sixthRank">
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                </div>
+                <div class="items" id="seventhRank">
+                    <div>&#9817;</div>
+                    <div>&#9817;</div>
+                    <div>&#9817;</div>
+                    <div>&#9817;</div>
+                    <div>&#9817;</div>
+                    <div>&#9817;</div>
+                    <div>&#9817;</div>
+                    <div>&#9817;</div>
+                </div>
+                <div class="items" id="eighthRank">
+                    <div>&#9814;</div>
+                    <div>&#9816;</div>
+                    <div>&#9815;</div>
+                    <div>&#9813;</div>
+                    <div>&#9812;</div>
+                    <div>&#9815;</div>
+                    <div>&#9816;</div>
+                    <div>&#9814;</div>
+                </div>
+            </div>
         </section>
     </main>
     <footer>
