About me content

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <div class="card">
                 <img src="https://codjoelmayer.github.io/projectImages/images/joel9.jpg" alt="profile" loading="lazy">
                 <h2>Joel Mukanya</h2>
-                <span id="about-content">About me</span>
+                <span about-content>About me</span>
             </div>
         </section>
         <section id="chess">
@@ -115,7 +115,7 @@
     </main>
     <footer>
         <p id="footer-content">Joel's Favorite Recreation @
-            <span id="cYear"></span>
+            <span cYear></span>
         </p>
     </footer>
     <script src="./script/code.js"></script>
